<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_battery_level">Battery: %d%%</string>
    <string name="accessibility_battery_level_charging">Battery charging: %d%%</string>
    <string name="accessibility_bluetooth_name">Connected to %s.</string>
    <string name="accessibility_clear_all">Clear all notifications.</string>
    <string name="accessibility_close">Close</string>
    <string name="accessibility_control_change_favorite">favorite</string>
    <string name="accessibility_control_change_unfavorite">unfavorite</string>
    <string name="accessibility_control_favorite">Favorited</string>
    <string name="accessibility_control_favorite_position">Favorited, position %d</string>
    <string name="accessibility_control_move">Move to position %d</string>
    <string name="accessibility_control_not_favorite">Unfavorited</string>
    <string name="accessibility_desc_close">Close</string>
    <string name="accessibility_desc_lock_screen">Lock screen</string>
    <string name="accessibility_desc_notification_icon">%1$s notification: %2$s</string>
    <string name="accessibility_desc_notification_shade">Notification shade.</string>
    <string name="accessibility_desc_qs_notification_shade">Quick settings and Notification shade.</string>
    <string name="accessibility_desc_quick_settings">Quick settings.</string>
    <string name="accessibility_desc_quick_settings_edit">Quick settings editor.</string>
    <string name="accessibility_desc_work_lock">Work lock screen</string>
    <string name="accessibility_key">Custom navigation button</string>
    <string name="accessibility_long_click_tile">Open settings</string>
    <string name="accessibility_not_connected">Not connected.</string>
    <string name="accessibility_notification_section_header_gentle_clear_all">Clear all silent notifications</string>
    <string name="accessibility_qs_edit_position">Position %1$d</string>
    <string name="accessibility_quick_settings_bluetooth">Bluetooth.</string>
    <string name="accessibility_quick_settings_bluetooth_changed_off">Bluetooth turned off.</string>
    <string name="accessibility_quick_settings_bluetooth_changed_on">Bluetooth turned on.</string>
    <string name="accessibility_quick_settings_bluetooth_device_tap_to_activate">activate</string>
    <string name="accessibility_quick_settings_bluetooth_device_tap_to_disconnect">disconnect</string>
    <string name="accessibility_quick_settings_bluetooth_on">Bluetooth on.</string>
    <string name="accessibility_quick_settings_data_saver_changed_off">Data Saver turned off.</string>
    <string name="accessibility_quick_settings_data_saver_changed_on">Data Saver turned on.</string>
    <string name="accessibility_quick_settings_dnd">Do Not Disturb.</string>
    <string name="accessibility_quick_settings_dnd_alarms_on">alarms only</string>
    <string name="accessibility_quick_settings_dnd_changed_off">Do Not Disturb turned off.</string>
    <string name="accessibility_quick_settings_dnd_changed_on">Do Not Disturb turned on.</string>
    <string name="accessibility_quick_settings_dnd_none_on">total silence</string>
    <string name="accessibility_quick_settings_location_changed_off">Location reporting turned off.</string>
    <string name="accessibility_quick_settings_location_changed_on">Location reporting turned on.</string>
    <string name="accessibility_quick_settings_open_settings">Open %s settings.</string>
    <string name="accessibility_quick_settings_page">Page %1$d of %2$d</string>
    <string name="accessibility_quick_settings_rotation">Auto-rotate screen</string>
    <string name="accessibility_quick_settings_wifi_changed_off">Wifi turned off.</string>
    <string name="accessibility_quick_settings_wifi_changed_on">Wifi turned on.</string>
    <string name="accessibility_send_smart_reply">Send</string>
    <string name="accessibility_status_bar_hotspot">Hotspot</string>
    <string name="accessibility_tile_disabled_by_policy_action_description">learn more</string>
    <string name="accessibility_volume_level">Volume: %d%%</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="alarm_template">at %1$s</string>
    <string name="alarm_template_far">on %1$s</string>
    <string name="all_network_unavailable">No networks available</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_continue">Continue</string>
    <string name="app_continue_detail">Open the app without restarting</string>
    <string name="app_info">App info</string>
    <string name="app_name">DesktopSystemUI</string>
    <string name="app_not_found">App can’t be found</string>
    <string name="app_pinned_toast">An app is pinned on your phone. Unpin firstly.</string>
    <string name="app_restart">Restart</string>
    <string name="app_restart_detail">Restart the app</string>
    <string name="app_tray_description">App tray</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applying">Applying…</string>
    <string name="apps_active_in_background">Apps active in background</string>
    <string name="arrow_toast_notification_panel_tip">To see new notifications, click the button in the bottom corner.</string>
    <string name="arrow_toast_volume_panel_tip">Click on the volume button to switch audio channels and adjust volume.</string>
    <string name="audio_sharing_description">Sharing audio</string>
    <string name="back">Back</string>
    <string name="back_description">Back</string>
    <string name="battery_detail_switch_title">Battery Saver</string>
    <string name="battery_meter_very_low_overlay_symbol">!</string>
    <string name="bluetooth_a2dp_profile_summary_connected">Connected to media audio</string>
    <string name="bluetooth_a2dp_profile_summary_use_for">Use for media audio</string>
    <string name="bluetooth_active_battery_level">Active, %1$s battery</string>
    <string name="bluetooth_active_battery_level_untethered">Active, L: %1$s battery, R: %2$s battery</string>
    <string name="bluetooth_active_no_battery_level">Active</string>
    <string name="bluetooth_battery_level">%1$s battery</string>
    <string name="bluetooth_battery_level_untethered">L: %1$s battery, R: %2$s battery</string>
    <string name="bluetooth_connected">Connected%1$s</string>
    <string name="bluetooth_connected_battery_level">Connected, battery %1$s%2$s</string>
    <string name="bluetooth_connected_no_a2dp">Connected (no media)%1$s</string>
    <string name="bluetooth_connected_no_a2dp_battery_level">Connected (no media), battery %1$s%2$s</string>
    <string name="bluetooth_connected_no_headset">Connected (no phone)%1$s</string>
    <string name="bluetooth_connected_no_headset_battery_level">Connected (no phone), battery %1$s%2$s</string>
    <string name="bluetooth_connected_no_headset_no_a2dp">Connected (no phone or media)%1$s</string>
    <string name="bluetooth_connected_no_headset_no_a2dp_battery_level">Connected (no phone or media), battery %1$s%2$s</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting…</string>
    <string name="bluetooth_headset_profile_summary_connected">Connected to phone audio</string>
    <string name="bluetooth_headset_profile_summary_use_for">Use for phone audio</string>
    <string name="clear_all_notifications_text">Clear all</string>
    <string name="desktop_auto_add">New apps on home screen</string>
    <string name="desktop_auto_add_summary">Automatically add newly installed apps to home screen</string>
    <string name="display_setting">Display setting</string>
    <string name="dnd_setting_summary">Prevent notifications from showing on the screen</string>
    <string name="dnd_setting_title">Block notifications</string>
    <string name="ime_decription">Choose input method</string>
    <string name="lock_description">Lock</string>
    <string name="manage_notifications_history_text">History</string>
    <string name="mirror_phone_setting_description">Phone</string>
    <string name="mobile_settings_apply">Apply</string>
    <string name="mobile_settings_mode_phone">Phone UI without mirror</string>
    <string name="recents_description">Recents</string>
    <string name="restart_decription">Restart</string>
    <string name="rotate_decription">Rotate screen</string>
    <string name="settings_display_mode">Display view</string>
    <string name="settings_display_orientation">Orientation</string>
    <string name="settings_display_resolution">Resolution</string>
    <string name="settings_mode_desktop">Desktop</string>
    <string name="settings_mode_land">Landscape</string>
    <string name="settings_mode_mirror">Mirror</string>
    <string name="settings_mode_phone">Mobile</string>
    <string name="settings_mode_portrait">Portrait</string>
    <string name="settings_mouse">Mouse</string>
    <string name="settings_mouse_pointer">Mouse pointer</string>
    <string name="settings_mouse_primary_button">Primary Button</string>
    <string name="settings_mouse_primary_left">Left</string>
    <string name="settings_mouse_primary_right">Right</string>
    <string name="settings_mouse_speed">Pointer speed</string>
    <string name="settings_open_same_app">App launch preference</string>
    <string name="settings_open_same_app_summary">Set app behavior for opening on another display</string>
    <string name="settings_phone_in_window">Phone simulator</string>
    <string name="settings_phone_in_window_summary">Access your phone from the taskbar</string>
    <string name="settings_text_input">Text input</string>
    <string name="system_settings_language_input">Languages &amp; input</string>
    <string name="test_inject">TestInject</string>
    <string name="test_reflect">TestReflect</string>
    <string name="tooltips_screenshot_tools">Screenshot</string>
    <string name="unlock_to_see_notif_text">Unlock to see older notifications</string>
</resources>