<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/testReflect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_reflect"/>
    <Button
        android:id="@+id/testInject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_inject"/>
    <Button
        android:id="@+id/mirror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mirror_phone_setting_description"/>
</LinearLayout>
