<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">
        <LinearLayout
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="24dp">
            <TextView
                android:text="@string/settings_display_mode"
                style="@style/MobileUiOptionTitle"/>
            <RadioGroup
                android:orientation="vertical"
                android:id="@+id/mode_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rb_desktop"
                    android:tag="1"
                    android:text="@string/settings_mode_desktop"
                    style="@style/MobileUiRadioButton"/>
                <RadioButton
                    android:id="@+id/rb_mirror"
                    android:tag="0"
                    android:text="@string/settings_mode_mirror"
                    style="@style/MobileUiRadioButton"/>
                <RadioButton
                    android:id="@+id/rb_phoneUi"
                    android:tag="2"
                    android:checked="true"
                    android:text="@string/mobile_settings_mode_phone"
                    style="@style/MobileUiRadioButton"/>
            </RadioGroup>
            <TextView
                android:layout_marginTop="8dp"
                style="@style/MobileUiOptionTitle"/>
            <TextView
                android:gravity="center_vertical"
                android:id="@+id/tv_resolution"
                android:background="@drawable/bg_setting_edittext"
                android:paddingLeft="24dp"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="2dp"
                android:drawablePadding="9dp"
                android:drawableEnd="@drawable/ic_arrow"
                android:layout_marginEnd="24dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/orientation_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_orientation"
                    android:layout_marginTop="8dp"
                    android:text="@string/settings_display_orientation"
                    style="@style/MobileUiOptionTitle"/>
                <RadioGroup
                    android:orientation="vertical"
                    android:id="@+id/orientation_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/rb_land"
                        android:text="@string/settings_mode_land"
                        style="@style/MobileUiRadioButton"/>
                    <RadioButton
                        android:id="@+id/rb_portrait"
                        android:text="@string/settings_mode_portrait"
                        style="@style/MobileUiRadioButton"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_gravity="bottom|center_horizontal"
        android:id="@+id/tv_apply"
        android:background="@drawable/apply_button_bg"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="18dp"
        android:text="@string/mobile_settings_apply"
        android:paddingHorizontal="16dp"/>
</FrameLayout>
