<?xml version="1.0" encoding="utf-8"?>
<com.motorola.taskbar.bar.AppStreamTaskBarView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/TaskBarTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/taskbar_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <com.android.systemui.statusbar.policy.KeyButtonView
                android:layout_gravity="center_vertical"
                android:id="@+id/back"
                app:tooltipText="@string/back"
                style="@style/MobileTaskTaskBarKeyButton"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:id="@+id/recent_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <com.android.systemui.statusbar.policy.KeyButtonView
                android:layout_gravity="center_vertical"
                android:id="@+id/recents"
                app:tooltipText="@string/recents_description"
                style="@style/MobileTaskTaskBarKeyButton"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:id="@+id/ime_container"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <com.android.systemui.statusbar.policy.KeyButtonView
                android:layout_gravity="center_vertical"
                android:id="@+id/ime"
                app:tooltipText="@string/ime_decription"
                style="@style/MobileTaskTaskBarKeyButton"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <com.android.systemui.statusbar.policy.KeyButtonView
                android:layout_gravity="center_vertical"
                android:id="@+id/restart"
                app:tooltipText="@string/restart_decription"
                style="@style/MobileTaskTaskBarKeyButton"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:id="@+id/rotation_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <com.android.systemui.statusbar.policy.KeyButtonView
                android:layout_gravity="center_vertical"
                android:id="@+id/rotate"
                android:duplicateParentState="true"
                app:tooltipText="@string/rotate_decription"
                style="@style/MobileTaskTaskBarKeyButton"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <com.android.systemui.statusbar.policy.KeyButtonView
                android:layout_gravity="center_vertical"
                android:id="@+id/screenshot"
                app:tooltipText="@string/tooltips_screenshot_tools"
                style="@style/MobileTaskTaskBarKeyButton"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <com.android.systemui.statusbar.policy.KeyButtonView
                android:layout_gravity="center_vertical"
                android:id="@+id/lock"
                app:tooltipText="@string/lock_description"
                style="@style/MobileTaskTaskBarKeyButton"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:id="@+id/volume_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <com.motorola.taskbar.sysicons.VolumeSysIconView
                android:id="@+id/volume"
                android:padding="10dp"
                android:scaleType="fitCenter"
                style="@style/MobileTaskTaskBarKeyButton"/>
        </LinearLayout>
    </LinearLayout>
</com.motorola.taskbar.bar.AppStreamTaskBarView>
