<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="32dp">
        <TextView
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:textSize="16sp"
            android:textColor="@color/category_title_color"
            android:ellipsize="marquee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_display_mode"
            android:fontFamily="sans-serif-medium"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <RadioButton
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:id="@+id/rb_desktop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checked="true"
                    android:text="@string/settings_mode_desktop"
                    android:maxLines="2"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <RadioButton
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:id="@+id/rb_mirror"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/settings_mode_mirror"
                    android:maxLines="2"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:id="@+id/ll_phoneUi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <RadioButton
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:id="@+id/rb_phoneUi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/settings_mode_phone"
                    android:singleLine="true"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:textSize="16sp"
            android:textColor="@color/category_title_color"
            android:ellipsize="marquee"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/settings_display_resolution"
            android:fontFamily="sans-serif-medium"/>
        <TextView
            android:enabled="false"
            android:gravity="center_vertical"
            android:id="@+id/tv_resolution"
            android:background="@drawable/bg_setting_edittext"
            android:paddingLeft="24dp"
            android:paddingRight="9dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:drawableEnd="@drawable/ic_arrow"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:textSize="16sp"
            android:textColor="@color/category_title_color"
            android:ellipsize="marquee"
            android:id="@+id/tv_orientation"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/settings_display_orientation"
            android:fontFamily="sans-serif-medium"/>
        <RadioGroup
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">
            <RadioButton
                android:textSize="16sp"
                android:ellipsize="end"
                android:id="@+id/rb_land"
                android:paddingLeft="10dp"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_mode_land"
                android:maxLines="2"
                android:layout_weight="1"/>
            <RadioButton
                android:textSize="16sp"
                android:ellipsize="end"
                android:id="@+id/rb_portrait"
                android:paddingLeft="10dp"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_mode_portrait"
                android:maxLines="2"
                android:layout_weight="1"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>
