<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.notification.footer.ui.view.FooterView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.android.systemui.statusbar.AlphaOptimizedFrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="?android:attr/textAppearanceButton"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/unlock_prompt_footer"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/unlock_to_see_notif_text"
            android:drawablePadding="8dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.android.systemui.statusbar.notification.row.FooterViewButton
                android:id="@+id/manage_text"
                android:background="@drawable/notif_footer_btn_background"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:text="@string/manage_notifications_history_text"
                android:contentDescription="@string/manage_notifications_history_text"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toStartOf="@+id/dismiss_text"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextAppearance.NotificationFooterButton"/>
            <com.android.systemui.statusbar.notification.row.FooterViewButton
                android:id="@+id/dismiss_text"
                android:background="@drawable/notif_footer_btn_background"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:text="@string/clear_all_notifications_text"
                android:contentDescription="@string/accessibility_clear_all"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/manage_text"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextAppearance.NotificationFooterButton"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.android.systemui.statusbar.AlphaOptimizedFrameLayout>
</com.android.systemui.statusbar.notification.footer.ui.view.FooterView>
